--- a/src/components/Stock/Stock.module.css
+++ b/src/components/Stock/Stock.module.css
@@ -13,6 +13,7 @@
   width: 100vw;
   height: 2rem;
   list-style: none;
+  margin-top: 0.7rem;
 }
 
 .links a {
@@ -29,4 +30,40 @@
   align-items: center;
   justify-content: center;
   flex-flow: row wrap;
+}
+
+@media (max-width: 1100px) {
+  .links {
+    margin-top: 0.5rem;
+  }
+}
+
+@media (max-width: 927px) {
+  .links {
+    margin-top: 0.1rem;
+  }
+}
+
+@media (max-width: 723px) {
+  .links {
+    margin-top: 1.6rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .links {
+    margin-top: 1.5rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .links {
+    margin-top: 1.5rem;
+  }
+}
+
+@media (max-width: 540px) {
+  .links {
+    margin-top: 1rem;
+  }
 }
